--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+body{
+  width: 100%;
+  min-height: 100vh;
+  
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+main{
+margin-left: auto;
+margin-right: auto;
+} 
+
